macros/tests/ui/gprogram_fails_multiple_not_allowed_on_one_impl.rs
use sails_macros::gprogram;

struct MyProgram;

#[gprogram]
#[gprogram]
impl MyProgram {
    pub fn new() -> Self {
        Self
    }
}

#[tokio::main]
async fn main() {}
